--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ input:valid ~ label{
     margin-right: 5px;
     position: fixed;
     left: 90px;
-    bottom: 160.5px;
+    bottom: 161.5px;
 }
 
 
@@ -144,6 +144,7 @@ button{
 
 button:hover{
     background-color: #fff;
-    transform: scale(1.1)
+    transform: scale(1.1);
+    transition: .7s;
 
 }
